[gd_scene load_steps=3 format=3 uid="uid://df4ghbl820qbi"]

[ext_resource type="Script" uid="uid://ddn3ai8psl2ut" path="res://FourColorTheory/GameController.gd" id="1_co4eq"]
[ext_resource type="Script" uid="uid://bbfccpfl7o7j5" path="res://FourColorTheory/MapGenerator.gd" id="2_w5q0p"]

[node name="FourColourGame" type="Control"]
layout_mode = 3
anchor_right = 1.001
anchor_bottom = 1.001
offset_right = 0.0799561
offset_bottom = -0.0800781
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_co4eq")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(2.98411e-06, 0.518591, 0.472518, 1)

[node name="MapGenerator" type="Node2D" parent="."]
position = Vector2(0, 80)
script = ExtResource("2_w5q0p")
map_width = 1152.0
map_height = 568.0

[node name="TopPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="Title" type="Label" parent="TopPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -11.5
offset_right = 201.0
offset_bottom = 11.5
grow_vertical = 2
text = "Four Colour Map Game"
vertical_alignment = 1

[node name="RegenerateButton" type="Button" parent="TopPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 220.0
offset_top = -15.0
offset_right = 320.0
offset_bottom = 15.0
grow_vertical = 2
text = "New Map"

[node name="ColorsLabel" type="Label" parent="TopPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -11.5
offset_right = -50.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Colors:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="WhiteButton" type="Button" parent="TopPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Eraser (remove color)"
text = "â†º"

[node name="RedButton" type="Button" parent="TopPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -20.0
offset_right = 50.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Red"
text = "R"

[node name="ColorRect" type="ColorRect" parent="TopPanel/RedButton"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
grow_horizontal = 2
grow_vertical = 0
color = Color(1, 0, 0, 1)

[node name="BlueButton" type="Button" parent="TopPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 60.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Blue"
text = "B"

[node name="ColorRect" type="ColorRect" parent="TopPanel/BlueButton"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 1, 1)

[node name="GreenButton" type="Button" parent="TopPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 110.0
offset_top = -20.0
offset_right = 150.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Green"
text = "G"

[node name="ColorRect" type="ColorRect" parent="TopPanel/GreenButton"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 1, 0, 1)

[node name="YellowButton" type="Button" parent="TopPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 160.0
offset_top = -20.0
offset_right = 200.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Yellow"
text = "Y"

[node name="ColorRect" type="ColorRect" parent="TopPanel/YellowButton"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
grow_horizontal = 2
grow_vertical = 0
color = Color(1, 1, 0, 1)

[node name="StatusLabel" type="Label" parent="TopPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -11.5
offset_right = -20.0
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
text = "Selected: Eraser"
horizontal_alignment = 2
vertical_alignment = 1
